SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Ocean_DynamoDB_Request__c.object
<CustomObject>
    <fields>
        <fullName>ADO_Notes__c</fullName>
        <label>ADO Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AWS_Account_Name__c</fullName>
        <label>AWS Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_AWS_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Component__c</fullName>
        <label>Application Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Calculated_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity_Type__c</fullName>
        <label>Capacity Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_DynamoDB_Capacity_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Environment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Cost__c</fullName>
        <label>Estimated Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Instance_Id__c</fullName>
        <displayFormat>DD-{00000}</displayFormat>
        <label>Instance Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Requested__c</fullName>
        <label>Number of Months Requested</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <label>Ocean Request Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Read_Capacity_Units_per_Month__c</fullName>
        <label>Read Capacity Units per Month</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Read_Consistency__c</fullName>
        <label>Read Consistency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_DynamoDB_Read_Consistency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reservation_Term__c</fullName>
        <label>Reservation Term</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_DynamoDB_Reservation_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Resource_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Data_Storage_GBMonth__c</fullName>
        <label>Total Data Storage (GB/Month)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Cost__c</fullName>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Write_Capacity_Units_per_Month__c</fullName>
        <label>Write Capacity Units per Month</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Ocean DynamoDB Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ocean_Request_Id__c</columns>
        <columns>AWS_Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>DynamoDB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ocean DynamoDB Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>